# gen_os

./: .gitignore  .gitmodules  CMakeLists.txt  linker.ld  readme.md
include/: utils.h
include/boot/: multiboot2.h
include/drivers/: framebuffer.h
include/drivers/fonts/: font8x16.h
include/mm/: PhysicalMM.h  VirtualMM.h  physical_memory.h
include/utils/: io.h  string.h
include/x86_64/interrupts/: exceptions.h  idt.h
src/: kernel.cpp  utils.cpp
src/boot/: boot.asm  multiboot2.cpp
src/drivers/framebuffer/: framebuffer.cpp
src/kernel/: kernel.cpp
src/mm/: PhysicalMM.cpp  VirtualMM.cpp  physical_memory.cpp
src/utils/: io.cpp  string.cpp
src/x86_64/boot/: boot.asm
src/x86_64/interrupts/: exception.cpp  idt.cpp
